# storage_opendal

./: Cargo.toml  Dockerfile  README.md
benches/: main.rs
example/: config.toml
src/: config.rs  exporter.rs  health_check.rs  lib.rs  main.rs  storager.rs  util.rs
