[package]
name = "storage"
version = "6.7.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["full"] }
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
tower = "0.4"
tracing = "0.1"
async-recursion = "1.0"
rand = "0.8"
opendal = { version = "0.45", features = ["services-rocksdb", "services-moka"] }
# opendal disable the default-features of rocksdb, we need to enable it manually
rocksdb = "0.21"

cloud-util = "=0.8.1"
cita_cloud_proto = "=6.7.3"

[[bin]]
name = "bench"
path = "benches/main.rs"

[dev-dependencies]
tempfile = "3.10"
quickcheck = "1.0"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
