[package]
name = "storage"
version = "6.7.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.41", features = ["full"] }
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tower = "0.5"
tracing = "0.1"
async-recursion = "1.1"
rand = "0.8"
opendal = { version = "0.50", features = [
    "services-rocksdb",
    "services-moka",
    "services-azblob",
    "services-cos",
    "services-obs",
    "services-oss",
    "services-s3",
] }
# opendal disable the default-features of rocksdb, we need to enable it manually
rocksdb = "0.21"
reqwest = { version = "0.12", features = ["json"] }

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[[bin]]
name = "bench"
path = "benches/main.rs"

[dev-dependencies]
tempfile = "3.14"
quickcheck = "1.0"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
